2009-01-27  Bruno coudoin  <bruno.coudoin@free.fr>

	New background image for the target activity by Mathieu Ignacio.

	* src/target-activity/resources/target/Makefile.am:
	* src/target-activity/target.c: (start_board), (display_windspeed),
	(target_create_item), (request_score):

2009-01-26  Bruno coudoin  <bruno.coudoin@free.fr>

	Reworked target activity to no more use the button_large2 pixmap.
	Instead we have a cute translucant background that follows the
	text size.

	* src/target-activity/target.c: (key_press), (request_score):

2009-01-26  Bruno coudoin  <bruno.coudoin@free.fr>

	Reworked shapegame code to:
	- load the vertical selector from the skin
	- allow a color_background_skin in the Title xml board files.
	  It display a background around the title text. It avoid text
	  being bigger than the fixed background.

	* boards/skins/gartoon/hand.svg:
	* boards/skins/gartoon/skin.xml:
	* configure.in:
	* src/babymatch-activity/resources/Makefile.am:
	* src/babymatch-activity/resources/babymatch/board1_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board2_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board3_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board4_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board5_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board6_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board7_0.xml.in:
	* src/babymatch-activity/resources/shapegame/Makefile.am:
	* src/babymatch-activity/shapegame.c: (start_board), (end_board),
	(add_shape_to_list_of_shapes), (create_title),
	(add_xml_shape_to_data):
	* src/babyshapes-activity/resources/babyshapes/board5_0.xml.in:
	* src/babyshapes-activity/resources/babyshapes/board6_0.xml.in:
	* src/babyshapes-activity/resources/babyshapes/board7_0.xml.in:
	* src/chronos-activity/resources/chronos/board1_0.xml.in:
	* src/chronos-activity/resources/chronos/board4_3.xml.in:
	* src/doubleentry-activity/resources/doubleentry/board3_0.xml.in: