@@ -5,7 +5,13 @@ img_DATA = \
 	config_groups.svgz \
 	config_profiles.svgz \
 	config_reports.svgz \
-	config_users.svgz
+	config_users.svgz \
+	difficulty1.svgz \
+	difficulty2.svgz \
+	difficulty3.svgz \
+	difficulty4.svgz \
+	difficulty5.svgz \
+	difficulty6.svgz
 
 EXTRA_DIST = $(img_DATA) ${xml_in_files}
 CLEANFILES = $(xml_DATA)
